--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@ bin-release/
 
 # Other files and folders
 .settings/
-
+F1-cars/games 
+.seller/settings/oooooo
+./.’github,s.l,elskprograming./0’OZgames
 # Executables
 *.swf
 *.air
